[package]
name = "lyst"
version = "0.1.0"
authors = ["tharvik <tharvik@users.noreply.github.com>"]
edition = "2021"

[dependencies]
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
pin-project = "1"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "rt-multi-thread",
  "rt",
] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
sdl2 = { version = "0.35.2", default-features = false, features = [
  "gfx",
  "image",
  "mixer",
] }

[dev-dependencies]
console-subscriber = { version = "0.1" }
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
tokio = { version = "1", features = ["tracing"] }

[[bench]]
name = "mohawk"
harness = false
