[package]
name = "lyst"
version = "0.1.0"
authors = ["tharvik <tharvik@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
pict-decoder = { path = "../pict-decoder" }
pin-project = "1"
sdl2 = { version = "0.35", default-features = false, features = [
  "image",
  "mixer",
  "use-pkgconfig",
] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread",
] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
console-subscriber = { version = "0.1" }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tokio = { version = "1", features = ["tracing"] }

[[bench]]
name = "mohawk"
harness = false
