[package]
name = "pict-decoder"
version = "0.1.0"
authors = ["tharvik <tharvik@users.noreply.github.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
bytes = "1"
encoding_rs = "0.8"
packbits = { version = "0.1.0", path = "../packbits" }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
