[package]
name = "packbits-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.packbits]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "encode"
path = "fuzz_targets/encode.rs"
test = false
doc = false

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
